postgresql-common (220) UNRELEASED; urgency=medium

  * dh_make_pgxs: Use dh --with pgxs in template.
  * dh_make_pgxs: Add `R³: no` to control.in template.
  * Add t/190_pg_buildext.t covering pg_buildext and debhelper integration.

 -- Christoph Berg <myon@debian.org>  Wed, 07 Oct 2020 22:45:35 +0200

postgresql-common (219) unstable; urgency=medium

  * postgresql-server-dev-all: Depend on strict postgresql-common version.
  * pg_virtualenv: Export PGVERSION with the PostgreSQL major version.
  * pg_virtualenv: Add -p option to set extension_destdir.
  * pg_buildext: Add "virtualenv" action that loops over shells for testing.
  * pg_buildext: Fix "installed-versions" for empty package name suffixes.
  * pg_buildext: Don't update debian/control if debian/control.in is missing.
  * Move dh_pgxs_test after dh_link so we have the links in the install trees.
  * Skip invoking dh_pgxs_test if nocheck is set, or when on hurd-i386.

 -- Christoph Berg <myon@debian.org>  Tue, 06 Oct 2020 23:26:00 +0200

postgresql-common (218) unstable; urgency=medium

  * pg_buildext installcheck: Set DESTDIR during build-time tests.
  * pg_buildext clean: Do not assume Makefile to be present. (Closes: #971517)

 -- Christoph Berg <myon@debian.org>  Fri, 02 Oct 2020 12:49:44 +0200

postgresql-common (217) unstable; urgency=medium

  * Set PostgreSQL 13 as default version.
  * pg_upgradecluster: Rename wal_keep_segments to wal_keep_size on upgrades
    to PG 13.
  * pg_createcluster: Add option --quiet to suppress initdb output and make
    pg_virtualenv use it.
  * pg_createcluster: Allow -o --pgoption to override createcluster.conf
    settings.
  * t/060_obsolete_confparams.t: Generate full config files dynamically.
  * dh_make_pgxs: Use current debhelper version instead of the oldest one,
    support setting homepage, general template copy-editing.
  * Implement extension building as `dh $@ --with pgxs` and pgxs_loop, backed