@@ -2,6 +2,8 @@ postgresql-common (220) UNRELEASED; urgency=medium
 
   * dh_make_pgxs: Use dh --with pgxs in template.
   * dh_make_pgxs: Add `R³: no` to control.in template.
+  * debhelper: Use dpkg_architecture_value() instead of hostarch() because
+    Dh_Lib.pm on stretch and xenial doesn't have the latter yet.
   * Add t/190_pg_buildext.t covering pg_buildext and debhelper integration.
 
  -- Christoph Berg <myon@debian.org>  Wed, 07 Oct 2020 22:45:35 +0200
